--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A nodejs server to upload and download media files in ftp server",
   "scripts": {
-    "dev": "ncc build ./src/index.ts -w -o dist/",
+    "dev": "concurrently \"docker compose up\" \"ncc build ./src/index.ts -w -o dist/\"",
     "build": "ncc build ./src/index.ts -o dist/",
-    "start": "node dist/index.js"
+    "start": "concurrently \"docker compose up\" \"node dist/index.js\""
   },
   "keywords": [
     "server",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.10",
+    "concurrently": "^9.1.2",
     "express": "^4.21.2",
     "typescript": "^5.7.3"
   }
