build: change repo to turbo repo.

--- a/apps/.env.example
+++ b/apps/.env.example
@@ -4,6 +4,8 @@ DB_PASS=media
 DB_NAME=media
 DB_PORT=3306
 
+DB_URL="mysql://media:media@localhost:3306/media"
+
 FTP_HOST=localhost
 FTP_USER=media
 FTP_PASS=media
