--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
   "name": "media-matter",
-  "version": "1.0.0",
-  "description": "A nodejs server to upload and download media files in ftp server",
+  "private": true,
   "scripts": {
-    "dev": "concurrently \"docker compose up\" \"ncc build ./src/index.ts -w -o dist/\"",
-    "build": "ncc build ./src/index.ts -o dist/",
-    "start": "concurrently \"docker compose up\" \"node dist/index.js\""
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
-  "keywords": [
-    "server",
-    "media",
-    "ftp",
-    "upload",
-    "download",
-    "api"
-  ],
-  "author": {
-    "name": "Rifat Khan",
-    "email": "rifat6633@gmail.com",
-    "portfolio": "stepasidelil.vercel.app"
-  },
-  "homepage": "https://github.com/stepasidelil/media-matter#readme",
-  "license": "ISC",
-  "packageManager": "pnpm@9.15.0",
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.10",
-    "concurrently": "^9.1.2",
-    "express": "^4.21.2",
-    "typescript": "^5.7.3"
+    "prettier": "^3.4.2",
+    "turbo": "^2.3.4",
+    "typescript": "5.7.3"
+  },
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18"
   }
 }
