--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,9 +26,11 @@
   "devDependencies": {
     "@prisma/client": "^6.2.1",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "concurrently": "^9.1.2",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.2.1",
     "typescript": "^5.7.3"
   }
