--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A nodejs server to upload and download media files in ftp server",
   "scripts": {
-    "dev": "concurrently \"docker compose up\" \"ncc build ./src/index.ts -w -o dist/\"",
+    "dev": "concurrently \"docker compose up\" \"ncc build ./src/index.ts -w -o dist/\" \"nodemon dist/index.js\"",
     "build": "ncc build ./src/index.ts -o dist/",
     "start": "concurrently \"docker compose up\" \"node dist/index.js\""
   },
@@ -29,8 +29,10 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.9",
     "prisma": "^6.2.1",
     "typescript": "^5.7.3"
   }
