--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A nodejs server to upload and download media files in ftp server",
   "scripts": {
-    "dev": "concurrently \"docker compose up\" \"ncc build ./src/index.ts -w -o dist/\" \"nodemon dist/index.js\"",
-    "build": "ncc build ./src/index.ts -o dist/",
-    "start": "concurrently \"docker compose up\" \"node dist/index.js\""
+    "build": "concurrently \"prisma generate\" \"ncc build ./src/index.ts -o dist/\"",
+    "dev": "concurrently \"docker compose up\" \"prisma generate\" \"ncc build ./src/index.ts -w -o dist/\" \"nodemon dist/index.js\"",
+    "start": "concurrently \"docker compose up\" \"prisma generate\" \"node dist/index.js\""
   },
   "keywords": [
     "server",
