--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,9 +28,13 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
+    "@vercel/ncc": "^0.38.3",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
+    "execa": "^9.5.2",
     "express": "^4.21.2",
+    "fast-glob": "^3.3.3",
+    "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "prisma": "^6.2.1",
