--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "@vercel/ncc": "^0.38.3",
+    "chokidar": "^4.0.3",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "execa": "^9.5.2",
