--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A nodejs server to upload and download media files in ftp server",
   "scripts": {
-    "build": "concurrently \"prisma generate\" \"ncc build ./src/index.ts -o dist/\"",
+    "build": "concurrently \"prisma generate\" \"node scripts/build.js\"",
     "dev": "concurrently \"docker compose up\" \"prisma generate\" \"ncc build ./src/index.ts -w -o dist/\" \"nodemon dist/index.js\" \"prisma studio --browser none\"",
     "start": "concurrently \"docker compose up\" \"prisma generate\" \"node dist/index.js\""
   },
