build[server]: add express middleware express-fileupload, @types/express-fileupload and basic-ftp packages.

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,14 +26,17 @@
   "devDependencies": {
     "@prisma/client": "^6.2.1",
     "@types/express": "^5.0.0",
+    "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "@vercel/ncc": "^0.38.3",
+    "basic-ftp": "^5.0.5",
     "chokidar": "^4.0.3",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "execa": "^9.5.2",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
