--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,6 +25,7 @@
   "packageManager": "pnpm@9.0.0",
   "devDependencies": {
     "@prisma/client": "^6.2.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.8",
@@ -33,6 +34,7 @@
     "basic-ftp": "^5.0.5",
     "chokidar": "^4.0.3",
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "execa": "^9.5.2",
     "express": "^4.21.2",
