--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: media-matter-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: media
     volumes:
       - media_matter_db_data:/var/lib/mysql
@@ -18,26 +18,25 @@ services:
     environment:
       PMA_HOST: db
       PMA_USER: root
-      PMA_PASSWORD: rootpassword
+      PMA_PASSWORD: root
     ports:
       - "8080:80"
     depends_on:
       - db
 
-  ftp:
-    image: garethflowers/ftp-server:latest
-    container_name: media-matter-ftp
-    restart: always
-    environment:
-      - PUBLIC_IP=192.168.0.1
-      - FTP_PASS=123
-      - FTP_USER=user
-    ports:
-      - "20-21:20-21/tcp"
-      - "40000-40009:40000-40009/tcp"
+  minio:
+    image: minio/minio
     volumes:
-      - media_matter_ftp_data:/home/user
+      - media_matter_minio_data:/data
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: admin
+      MINIO_VOLUMES: /data
+    command: minio server --console-address ":9001"
 
 volumes:
   media_matter_db_data:
-  media_matter_ftp_data:
+  media_matter_minio_data:
