--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: media-matter-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: media
     volumes:
       - media_matter_db_data:/var/lib/mysql
@@ -18,7 +18,7 @@ services:
     environment:
       PMA_HOST: db
       PMA_USER: root
-      PMA_PASSWORD: root
+      PMA_PASSWORD: rootpassword
     ports:
       - "8080:80"
     depends_on:
@@ -33,7 +33,7 @@ services:
       - 9001:9001
     environment:
       MINIO_ROOT_USER: admin
-      MINIO_ROOT_PASSWORD: admin
+      MINIO_ROOT_PASSWORD: adminadmin
       MINIO_VOLUMES: /data
     command: minio server --console-address ":9001"
 
