--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,8 +4,8 @@
   "description": "A nodejs server to upload and download media files in ftp server",
   "scripts": {
     "build": "concurrently \"prisma generate\" \"node scripts/build.js\"",
-    "dev": "concurrently \"docker compose --project-name media-matter up\" \"prisma generate\" \"node scripts/build.js --dev\" \"prisma studio --browser none\"",
-    "start": "concurrently \"docker compose --project-name media-matter up\" \"prisma generate\" \"node dist/index.js\""
+    "dev": "concurrently \"prisma migrate deploy && prisma generate\" \"node scripts/build.js --dev\" \"prisma studio --browser none\"",
+    "start": "concurrently \"prisma migrate deploy && prisma generate\" \"node dist/index.js\""
   },
   "keywords": [
     "server",
