--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -42,6 +42,7 @@
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.4",
     "nodemon": "^3.1.9",
     "prisma": "^6.2.1",
     "typescript": "^5.7.3"
