--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -10,6 +10,10 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
